Add the start of the css code

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Grians</title>
+  <link href="css/main.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
   <img src="images/grain-left.svg" alt="">
   <h2>Grains</h2>
-  <img src="images/grains-right.svg" alt="">
+  <img src="images/grain-right.svg" alt="">
   <nav>
   <ul class="nav">
     <li><a href="#home">Home</a></li>
