Fix some errors within the file

--- a/index.html
+++ b/index.html
@@ -4,18 +4,29 @@
   <meta charset="utf-8">
   <title>Grians</title>
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
+  <header>
+    <section>
+    <div class="title">
   <img src="images/grain-left.svg" alt="">
   <h2>Grains</h2>
   <img src="images/grain-right.svg" alt="">
+  </div>
+</section>
+<section>
+  <div>
   <nav>
-  <ul class="nav">
-    <li><a href="#home">Home</a></li>
-    <li><a href="#cereals">Cereals</a></li>
-    <li><a href="#legumes">Legumes</a></li>
+  <ul>
+    <li><a class="btn"  href="#home">Home</a></li>
+    <li><a class="btn btn-cereals" href="#cereals">Cereals</a></li>
+    <li><a class="btn btn-Legumes" href="#legumes">Legumes</a></li>
   </ul>
-</nav>
+  </nav>
+</div>
+</section>
+  </header>
 </body>
 </html>
