--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section>
     <div class="title">
   <img src="images/grain-left.svg" alt="">
-  <h2>Grains</h2>
+  <h1>Grains</h1>
   <img src="images/grain-right.svg" alt="">
   </div>
 </section>
@@ -20,9 +20,9 @@
   <div>
   <nav>
   <ul>
-    <li><a class="btn"  href="#home">Home</a></li>
+    <li><a class="btn btn-home" href="#home">Home</a></li>
     <li><a class="btn btn-cereals" href="#cereals">Cereals</a></li>
-    <li><a class="btn btn-Legumes" href="#legumes">Legumes</a></li>
+    <li><a class="btn btn-legumes" href="#legumes">Legumes</a></li>
   </ul>
   </nav>
 </div>
